--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ permalink:           pretty
 
 # Pagination configuration (used by the `blog` layout)
 paginate:            5
-paginate_path:       '/blog/page-:num/'
+paginate_path:       '/page-:num/'
 
 # If you are upgrading form a v5 verison of Hydejack, uncomment the two lines below,
 # so that the location of the feed XML stays the same.
@@ -104,6 +104,9 @@ plugins:
   - jekyll-redirect-from
   - jekyll-relative-links
   - jekyll-sitemap
+
+include:
+  - _pages
 
 exclude:
   - README.md
