--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title:               Big Mud Ball
 
 # The unique resource location of your page.
 # Set to `https://<username>.github.io` when hosting on GitHub Pages
-url:                 http://app6.amanita.bigmudball.com
+url:                 https://bigmudball.com
 
 # Set to '' when hosting a blog on GitHub Pages, ie on `//<username>.github.io`
 # Set to '/<reponame>' when using the `gh-pages` branch of a repository
@@ -44,7 +44,7 @@ google_fonts:        Roboto+Slab:700|Noto+Sans:400,400i,700,700i
 
 # Set your Google Analytics id to receive `pageview` events.
 # To remove Google Anaylics from your page, remove the line below.
-google_analytics:    <UA-XXXXXXXX-X>
+google_analytics:    UA-105195922-1
 
 # Setting a disqus shortname will enable the comment section on pages with `comments: true` in the front matter
 disqus_shortname:    bigmudball
@@ -116,6 +116,12 @@ exclude:
   - package-lock.json
   - Gemfile
   - Gemfile.lock
+  - LICENSE.md
+  - NOTICE.md
+  - licenses
+  - assets/bower_components/html5shiv/MIT and GPL2 licenses
+  - assets/icomoon/demo.html
+
 
 kramdown:
   footnote_backlink: '&#x21a9;&#xfe0e;'
