--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ disqus_shortname:    bigmudball
 copyright:           '&copy; 2017. All rights reserved.'
 
 # Format of the permalinks
-permalink:           pretty
+permalink:           /posts/:title/
 
 # Pagination configuration (used by the `blog` layout)
 paginate:            5
@@ -91,6 +91,19 @@ collections:
   projects:
     permalink:       /projects/:path/
     output:          true
+  company:
+    permalink:       /:collection/:path/
+    output:          true
+
+  learning:
+    permalink:       /:collection/:path/
+    output:          true
+  person:
+    permalink:       /:collection/:path/
+    output:          true
+  tech:
+    permalink:       /:collection/:path/
+    output:          true
 
 # -----------------------------------------------------------------------------
 #  Advanced configuration
@@ -107,7 +120,6 @@ plugins:
 
 include:
   - pages
-  - 2017
 
 exclude:
   - README.md
@@ -121,6 +133,7 @@ exclude:
   - licenses
   - assets/bower_components/html5shiv/MIT and GPL2 licenses
   - assets/icomoon/demo.html
+  - google268782edc077bc74.html
 
 
 kramdown:
