--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,5 +1,8 @@
 # This file contains meta data for various social media sites
 ---
+  home:
+    name: Home
+    icon: icon-home
   email:
     name: Email
     icon: icon-mail
