--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -74,7 +74,7 @@ mdo:
     # npm:             <username>
     # hackernews:      <username>
     # trello:          <firstnamelastname>
-    # linkedin:        <username>
+    # linkedin:        <firstname-lastname-string>
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
